src/test/ui/issues/issue-12369.stderr
error: unreachable pattern
  --> $DIR/issue-12369.rs:10:9
   |
LL |         &[10,a, ref rest..] => 10
   |         ^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-12369.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

